[tool.poetry]
name = "accphys"
version = "0.1.0"
description = "Analyze non-linear single-particle storage ring dynamics"
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
lieops = "^0.1.1"
scipy = "^1.8.0"
pandas = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
