[tool.poetry]
name = "accphys"
version = "0.1.1"
description = "Analyze non-linear single-particle storage ring dynamics"
authors = ["Malte Titze <mtitze@users.noreply.github.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
lieops = "^0.2.3"
scipy = "^1.8.0"
tqdm = "^4.64.0"
cpymad = ">=1.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
